{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 2421,
  "lineage": "d261af2c-4349-6c3b-6dfd-d2548ce19382",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010575877879:loadbalancer/app/demo-alb/4f7cb835454ed4c0",
            "arn_suffix": "app/demo-alb/4f7cb835454ed4c0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-alb-531170587.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:010575877879:loadbalancer/app/demo-alb/4f7cb835454ed4c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de4270ea15d2ea44"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fb6a4c782162c09"
              },
              {
                "subnet_id": "subnet-0ebb6c24e94b19210"
              }
            ],
            "subnets": [
              "subnet-02fb6a4c782162c09",
              "subnet-0ebb6c24e94b19210"
            ],
            "vpc_id": "vpc-034d7e29fc624adfe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.http",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010575877879:listener/app/demo-alb/4f7cb835454ed4c0/42ecd1620da4b4d7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010575877879:targetgroup/app-demo-alb-d5e122ee-c62c5aeb/598db6430078ed8a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010575877879:listener/app/demo-alb/4f7cb835454ed4c0/42ecd1620da4b4d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:010575877879:loadbalancer/app/demo-alb/4f7cb835454ed4c0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_security_group.http",
            "module.alb.random_id.target_group_suffix",
            "module.log_group.aws_cloudwatch_log_group.this",
            "module.log_group.aws_cloudwatch_log_stream.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010575877879:targetgroup/app-demo-alb-d5e122ee-c62c5aeb/598db6430078ed8a",
            "arn_suffix": "targetgroup/app-demo-alb-d5e122ee-c62c5aeb/598db6430078ed8a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010575877879:targetgroup/app-demo-alb-d5e122ee-c62c5aeb/598db6430078ed8a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-demo-alb-d5e122ee-c62c5aeb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "dependencies": [
            "module.alb.random_id.target_group_suffix",
            "module.log_group.aws_cloudwatch_log_group.this",
            "module.log_group.aws_cloudwatch_log_stream.this",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:security-group/sg-0de4270ea15d2ea44",
            "description": "Allow all HTTP/HTTPS traffic from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de4270ea15d2ea44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-sg-20240919150049634700000010",
            "name_prefix": "http-sg-",
            "owner_id": "010575877879",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_node_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:security-group/sg-0aca5bd0ffc995286",
            "description": "Security group for ECS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aca5bd0ffc995286",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP from anywhere",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de4270ea15d2ea44"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-ecs-sg-d5e122ee20240919150052928400000011",
            "name_prefix": "demo-ecs-sg-d5e122ee",
            "owner_id": "010575877879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-ecs-sg-d5e122ee-sg"
            },
            "tags_all": {
              "Name": "demo-ecs-sg-d5e122ee-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.http",
            "module.log_group.aws_cloudwatch_log_group.this",
            "module.log_group.aws_cloudwatch_log_stream.this",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03731f47c0a72eaa0",
            "arn": "arn:aws:ec2:us-east-1:010575877879:elastic-ip/eipalloc-03731f47c0a72eaa0",
            "domain": "vpc",
            "id": "eipalloc-03731f47c0a72eaa0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-207-242.compute-1.amazonaws.com",
            "public_ip": "44.194.207.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-eip-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.internet_gateway.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cb2d339051aa753",
            "arn": "arn:aws:ec2:us-east-1:010575877879:elastic-ip/eipalloc-04cb2d339051aa753",
            "domain": "vpc",
            "id": "eipalloc-04cb2d339051aa753",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-226-144-93.compute-1.amazonaws.com",
            "public_ip": "54.226.144.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip-us-east-1b"
            },
            "tags_all": {
              "Name": "demo-eip-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.internet_gateway.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:internet-gateway/igw-0c224ec9529a6977e",
            "id": "igw-0c224ec9529a6977e",
            "owner_id": "010575877879",
            "tags": {
              "Name": "demo-igw-d5e122ee"
            },
            "tags_all": {
              "Name": "demo-igw-d5e122ee"
            },
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0540c7fe8d9c1d1db",
            "arn": "arn:aws:ec2:us-east-1:010575877879:elastic-ip/eipalloc-0540c7fe8d9c1d1db",
            "domain": "vpc",
            "id": "eipalloc-0540c7fe8d9c1d1db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-202-177-27.compute-1.amazonaws.com",
            "public_ip": "34.202.177.27",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-d5e122ee-eip-nat"
            },
            "tags_all": {
              "Name": "demo-d5e122ee-eip-nat"
            },
            "vpc": true
          },
          "dependencies": [
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0540c7fe8d9c1d1db",
            "association_id": "eipassoc-04f0836850785be7d",
            "connectivity_type": "public",
            "id": "nat-0bb1764f4d201f805",
            "network_interface_id": "eni-0e21c1e42ac2ac97f",
            "private_ip": "10.0.0.99",
            "public_ip": "34.202.177.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ebb6c24e94b19210",
            "tags": {
              "Name": "demo-d5e122ee-nat-gw"
            },
            "tags_all": {
              "Name": "demo-d5e122ee-nat-gw"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.nat_gateway.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5a7229c5449f410",
            "route_table_id": "rtb-02ba4bd5537a4e6dc",
            "subnet_id": "subnet-0ebb6c24e94b19210"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006293fb8d90fdd14",
            "route_table_id": "rtb-02ba4bd5537a4e6dc",
            "subnet_id": "subnet-02fb6a4c782162c09"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c224ec9529a6977e",
            "id": "r-rtb-02ba4bd5537a4e6dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ba4bd5537a4e6dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:route-table/rtb-0a5bd36b46aeb1ee1",
            "id": "rtb-0a5bd36b46aeb1ee1",
            "owner_id": "010575877879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-vpc-d5e122ee-private-rt-1"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:route-table/rtb-03b8b49ebfb005d7d",
            "id": "rtb-03b8b49ebfb005d7d",
            "owner_id": "010575877879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-vpc-d5e122ee-private-rt-2"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:route-table/rtb-02ba4bd5537a4e6dc",
            "id": "rtb-02ba4bd5537a4e6dc",
            "owner_id": "010575877879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-vpc-d5e122ee-public-rt"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f13296527237062",
            "route_table_id": "rtb-0a5bd36b46aeb1ee1",
            "subnet_id": "subnet-0ca89b0f5d8b02016"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e65d36f42a8e7ae",
            "route_table_id": "rtb-03b8b49ebfb005d7d",
            "subnet_id": "subnet-034a1ed2052341585"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5a7229c5449f410",
            "route_table_id": "rtb-02ba4bd5537a4e6dc",
            "subnet_id": "subnet-0ebb6c24e94b19210"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006293fb8d90fdd14",
            "route_table_id": "rtb-02ba4bd5537a4e6dc",
            "subnet_id": "subnet-02fb6a4c782162c09"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-0ca89b0f5d8b02016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca89b0f5d8b02016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-d5e122ee-private-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-private-us-east-1a"
            },
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-034a1ed2052341585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034a1ed2052341585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-d5e122ee-private-us-east-1b"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-private-us-east-1b"
            },
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-0ebb6c24e94b19210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebb6c24e94b19210",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-d5e122ee-public-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-public-us-east-1a"
            },
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-02fb6a4c782162c09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb6a4c782162c09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-d5e122ee-public-us-east-1b"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee-public-us-east-1b"
            },
            "vpc_id": "vpc-034d7e29fc624adfe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main",
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:vpc/vpc-034d7e29fc624adfe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d7922fa9ac77975",
            "default_route_table_id": "rtb-0eaa1a39e9f050cbb",
            "default_security_group_id": "sg-0f35ebd0b68b0e48c",
            "dhcp_options_id": "dopt-08e101c41153c0050",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034d7e29fc624adfe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eaa1a39e9f050cbb",
            "owner_id": "010575877879",
            "tags": {
              "Name": "demo-vpc-d5e122ee"
            },
            "tags_all": {
              "Name": "demo-vpc-d5e122ee"
            }
          },
          "dependencies": [
            "random_id.unique"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}